processed/gerrit/txt/51819.txt
Change:     51819
Subject:    LU-16980 build: fix gcc-12 [-Werror=use-after-free] error
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/51819
Change-Id:  Ibe783ab0d13e2ecde1736946323932ab5db53740
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2023-07-31 17:32:57.000000000
Updated:    2023-08-07 03:51:06.000000000
Patch Set:  2
Insertions: +1
Deletions:  -2
Comments:   1 (1 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Timothy Day

--- Commit Message ---
LU-16980 build: fix gcc-12 [-Werror=use-after-free] error

This patch fixes the following [-Werror=use-after-free] and
[-Werror=stringop-overflow=] errors detected by gcc 12:

libcfs/include/libcfs/util/list.h:481:42: error: pointer 'tmp'
used after 'free' [-Werror=use-after-free]
  481 |              pos = list_entry(pos->member.next, typeof(*pos), member),  \
      |                                          ^
libcfs/include/libcfs/util/list.h:239:28: note: in definition of macro 'list_entry'
  239 |         ((type *)((char *)(ptr)-(char *)(&((type *)0)->member)))
      |                            ^~~
obd.c:5118:9: note: in expansion of macro 'list_for_each_entry'
 5118 |         list_for_each_entry(tmp, head, lpn_list) {
      |         ^~~~~~~~~~~~~~~~~~~
obd.c:5124:17: note: call to 'free' here
 5124 |                 free(tmp);
      |                 ^~~~~~~~~

test_brw.c: In function 'main':
test_brw.c:227:22: error: 'write' specified size between 9223372036854775808
and 18446744073709551615 exceeds maximum object size 9223372036854775807
[-Werror=stringop-overflow=]
  227 |                 rc = write(fd, buf, len);
      |                      ^~~~~~~~~~~~~~~~~~~

Change-Id: Ibe783ab0d13e2ecde1736946323932ab5db53740
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/51819
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2023-07-31 17:32:57.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2023-07-31 17:35:10.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2023-07-31 17:59:17.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/96541/ : SUCCESS

--- Message (Andreas Dilger, 2023-07-31 20:12:20.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Timothy Day, 2023-08-01 01:02:37.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2023-08-07 03:51:03.000000000) ---
Patch Set 1: Code-Review+2

(1 comment)

--- Message (Oleg Drokin, 2023-08-07 03:51:06.000000000) ---
Change has been successfully cherry-picked as c13d919564cf6692a794fe1ceb1875971f8cde03 by Oleg Drokin
